WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66221
Web Inspector: [V8] crash upon stepIn while not on pause.
https://bugs.webkit.org/show_bug.cgi?id=66221
Summary
Web Inspector: [V8] crash upon stepIn while not on pause.
Pavel Feldman
Reported
2011-08-15 05:43:14 PDT
Patch to follow.
Attachments
Patch
(4.62 KB, patch)
2011-08-15 05:55 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-08-15 05:55:51 PDT
Created
attachment 103909
[details]
Patch
Pavel Feldman
Comment 2
2011-08-15 07:32:53 PDT
Comment on
attachment 103909
[details]
Patch Clearing flags on attachment: 103909 Committed
r93042
: <
http://trac.webkit.org/changeset/93042
>
Pavel Feldman
Comment 3
2011-08-15 07:33:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug