Web Inspector: [V8] crash upon stepIn while not on pause. https://bugs.webkit.org/show_bug.cgi?id=66221

Reviewed by Yury Semikhatsky.

* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::resume):
(WebCore::InspectorDebuggerAgent::stepOver):
(WebCore::InspectorDebuggerAgent::stepInto):
(WebCore::InspectorDebuggerAgent::stepOut):
(WebCore::InspectorDebuggerAgent::assertPaused):
* inspector/InspectorDebuggerAgent.h:
* inspector/front-end/ScriptsPanel.js:
(WebInspector.ScriptsPanel.prototype._stepOverClicked):
(WebInspector.ScriptsPanel.prototype._stepIntoClicked):
(WebInspector.ScriptsPanel.prototype._stepOutClicked):

Canonical link: https://commits.webkit.org/82061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93042 268f45cc-cd09-0410-ab3c-d52691b4dbfc