Source/WebCore/inspector/InspectorDebuggerAgent.h
@@ -136,6 +136,7 @@ private:
 
     PassRefPtr<InspectorObject> resolveBreakpoint(const String& breakpointId, const String& scriptId, const ScriptBreakpoint&);
     void clear();
+    bool assertPaused(ErrorString*);
 
     typedef HashMap<String, Script> ScriptsMap;
     typedef HashMap<String, Vector<String> > BreakpointIdToDebugServerBreakpointIdsMap;
